--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="images/DP.JPG" alt="code-img">
+        <img class="code-img" src="images/DP.jpg" alt="code-img">
 
         <h3>Design & Development</h3>
         <p>I started learning to code when I was 17 years old because I wanted to make profile websites of companys. Over time, I have gained a wealth of experience designing and developing web applications and marketing skills.</p>
@@ -43,7 +43,7 @@
         <p>But my best skill is Pubg Pro. If you want to play with me send requst on pubg mobile</p>
       </div>
       <div class="skill-row">
-        <img class="code-img" src="images/L.JPG" alt="code-img">
+        <img class="code-img" src="images/L.jpg" alt="code-img">
 
         <h3>Known Programming Language's</h3>
         <p>I started code Development form Html,c,c++,java,css,JavaScript,Jquary,php.</p>
