--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <h3>If you love coding.</h3>
       <p class="contact-message">Love Pubg as much as I do? Let's play a PVP match! We can talk about coding skills after the match!</p>
-      <a class="btn" href="onkarkhandekar2222@gamil.com">CONTACT ME</a>
+      <a class="btn" href="mailto:onkarkhandekar2222@gamil.com">CONTACT ME</a>
     </div>
   </div>
 
