--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="middle-container">
     <div class="profile">
       <div class="row" style="background: url('images/cd.jpg') no-repeat;background-position: center;">
-        <img src="images/om2.jpg" alt="onkar-profile-img" style="width: 250px;border-radius: 56%;">
+        <img src="images/om2.jpg" alt="onkar-profile-img" style="width: 250px;border-radius: 56%;position: relative;left: 559px;">
       </div>
       <h2>Hello.</h2>
       <p class="intro">I am Web Developer. I ❤️codeing and debuging.</p>
