--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
+<style>
+  body {
+  color: #40514E;
+  margin: 0;
+  text-align:center;
+  font-family: 'Merriweather', serif;
+}
+  </style>
 
 <body>
   <div class="top-container">
