--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="middle-container">
     <div class="profile">
       <div class="row" style="background: url('images/cd.jpg') no-repeat;background-position: center;">
-        <img src="images/om2.jpg" alt="onkar-profile-img" style="width: 250px;border-radius: 56%;position: relative;left: 559px;">
+        <img id="PP" src="om2.jpg" alt="onkar-profile-img" style="margin-right: auto;margin-left: auto;width: 250px;border-radius: 56%;pos;display: block;">
       </div>
       <h2>Hello.</h2>
       <p class="intro">I am Web Developer. I ❤️codeing and debuging.</p>
